From version 0.3.5 to 0.3.6
- expanded userid to accept remote user id's that are encoded uuid's.

From version 0.3.4 to 0.3.5
- small fixes for memset in forward and messages
- pedantic code cleanup

From version 0.3.3 to 0.3.4
- new common uri code for libsipwitch to better support plugin development.
- refer rerouting support in plugins

From version 0.3.2 to 0.3.3
- reorganized api and dedicated to normal server build.
- runlevel slot 3 dedicated to derived per server specific plugins.
- new server "forward" plugin added. 

From version 0.3.1 to 0.3.2
- use of new "user context" objects, allows account lookup to be dynamic
  and externalized.
- minor fix for init script.
- use of GROUP to set effective server group id.
- uses memalloc instead of mempager, now requires ucommon 1.9.8...

From version 0.3.0 to 0.3.1
- expansion of rtpproxy runtime api for expanding assignment and counting
  (might be used to add additional rtp proxy sockets in a re-invite when 
  video is added, for example...)
- fix registration clearing & reuse when map becomes "offline"...
- correct integration with offline/online registry status & clearing

From version 0.2.7 to 0.3.0
- variant build of zeroconf plugin based on support.
- new rtpproxy engine code in api and server.
- elimination of unused fifo subscribe/publish mechanisms...
- introduction of generic rtp proxying as plugin module
- introduction of subscriber module for "voip provider" premise gateways

From version 0.2.6 to 0.2.7
- basic re-invite processing added.
- transaction completion on relay of far end response.

From version 0.2.5 to 0.2.6
- change of linkage handling of server.

From version 0.2.4 to 0.2.5
- fix for proper handling of log files and cgi extraction of call log with
  timestamp key.  Together these changes allow cgi polling of call details.

From version 0.2.3 to 0.2.4
- small fixups on path usage in make and spec files.
- fix in config file path scanning.

From version 0.2.2 to 0.2.3