@@ -1,5 +1,6 @@
 From version 0.3.5 to 0.3.6
 - expanded userid to accept remote user id's that are encoded uuid's.
+- correctly refresh registration contact info if userid changes.
 
 From version 0.3.4 to 0.3.5
 - small fixes for memset in forward and messages
